--- a/style.css
+++ b/style.css
@@ -41,3 +41,11 @@ button#searchButton {
 button#searchButton:hover {
   background-color: #0056b3;
 }
+
+input {
+  width: 45%;
+  margin: 2%;
+  height: 30px;
+  text-align: center;
+  border-radius: 5%;
+}
